openshift/deployments/query-tester/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: query-test
spec:
  revisionHistoryLimit: 5
  replicas: 1
  strategy:
    rollingUpdate:
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: query-test
    spec:
      volumes:
      - name: temp
        emptyDir: {}
      - name: config
        emptyDir: {}
      containers:
      - name: query-test
        image: douglasconnect/orn-query-test:latest
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "20Mi"
            cpu: "10m"
        volumeMounts:
        - name: temp
          mountPath: /tmp
        volumeMounts:
        - name: config
          mountPath: /root/defaults
      - name: git-defaults-puller
        image: douglasconnect/orn-query-test-defaults:latest
        resources:
          requests:
            memory: "10Mi"
            cpu: "5m"
        volumeMounts:
        - name: config
          mountPath: /configuration
