openshift/deployments/query-tester/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: query-test
  labels:
    app: query-test
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: query-test
