openshift/deployments/query-tester/route.yaml
kind: Route
apiVersion: v1
metadata:
  name: query-test
  annotations:
      kubernetes.io/tls-acme: 'true'
spec:
  host: query-test.prod.openrisknet.org
  to:
    kind: Service
    name: query-test
